# Knife

./: .gitignore  README.md
0_mycalcurse/: Makefile.in  configure  configure.ac
10_library/: README.md
10_library/libwangv_library/src/: Makefile.am  Makefile.in  displaylog.cpp  encrypt.cpp  functionstemplate.h  logcatdisplay.h  pimpltemplate.h  processcommunication.h  standard.h  threadtemplate.h  wangvlib.cpp  wangvlib.h
11_template/: Makefile  head.h  main.cpp
12_base_policy/: head.h  main.cpp
13_enum2value/: head.h  main.cpp  play
14_selecttype/: head.h  main.cpp
14_type2type/: head.h  main.cpp  play
15_meta_template/: main.cpp
15_vprint/: head.h  main.cpp  play
16_extern/: Makefile  head.h  main.cpp  utils.c
16_templat/: Makefile  head.h  main.cpp  play
17_classcopy/: main.cpp
18_vector/: main.cpp
19_foreach/: main.cpp  play
1_string/: main.cpp
20_strstr/: .main.cpp.swp  main.cpp
21_template_design_pattern/: Makefile  abstraction.cpp  abstraction.h  implementation.cpp  implementation.h  main.cpp
22_status_design_pattern/: Makefile  context.cpp  context.h  main.cpp  runstatus.cpp  runstatus.h  status.cpp  status.h  stopstatus.cpp  stopstatus.h
23_observer_design_pattern/: Makefile  concretsubject.cpp  concretsubject.h  dogobserver.cpp  dogobserver.h  main.cpp  observer.cpp  observer.h  subject.cpp  subject.h
24_decorate_desing_pattern/: .boarddecorator.cpp.swp  .boarddecorator.h.swp  Makefile  boarddecorator.cpp  boarddecorator.h  component.cpp  component.h  concretecomponent.cpp  concretecomponent.h  decorator.cpp  decorator.h  main.cpp
25_compsite_design_pattern/: Makefile  component.cpp  component.h  composite.cpp  composite.h  leaf.cpp  leaf.h  main.cpp
26_proxy_desing_pattern/: Makefile  concretesubject.cpp  concretesubject.h  main.cpp  proxy.cpp  proxy.h  subject.cpp  subject.h
27_adaptor_design_pattern/: Makefile  adpatee.cpp  adpatee.h  main.cpp
28_unique_ptr/: README  main.cpp
29_precompilehead/: Makefile  main.cpp  stdgcc.h
2_ctime/: main.cpp
31-multi-core/: Makefile  README  main-good.c  main-save.c  main.cpp
32-input/: Makefile  main.cpp
33_define/: Makefile  main.cpp
34_version_script/: Makefile  README.md  libutils.vers  main.cpp  utils.cpp
35_gsl/: Makefile  main.cpp
36_gsl_plot/: main.cpp
37_mili/: mili-17.tgz
38_libev/: Makefile  README  (+1 more)
cmake/2-config/: CMakeLists.txt  main.cc
cmake/5-test/: CMakeLists.txt  api.cc  config.h  main.cc  test.cc  testthread.cc
cmake/5-test/utils/: CMakeLists.txt  misce.hpp  module.cc  module.h  nanothread.hpp  singleton.hpp
(+453 files in other folders)
