lib_LTLIBRARIES     = libwangv.la
include_HEADERS     = wangvlib.h keymap.h threadtemplate.h standard.h singletontemplate.h pimpltemplate.h functionstemplate.h processcommunication.h
libwangv_la_SOURCES = wangvlib.cpp displaylog.cpp globlekey.cpp encrypt.cpp \
                      wangvlib.h cstandard.h keymap.h pimpltemplate.h threadtemplate.h singletontemplate.h processcommunication.h \
		      functionstemplate.h \
                      standard.h
libwangv_la_LDFLAGS = -shared -fPI
libwangv_la_CPPFLAGS = -std=c++11
